--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             padding: 20px 0;
             text-align: center;
         }
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+        header p {
+            font-size: 1.2rem;
+            margin: 5px 0 0 0;
+        }
         main {
             max-width: 900px;
             margin: 20px auto;
@@ -31,7 +39,7 @@
         section {
             margin-bottom: 20px;
         }
-        h1, h2 {
+        h2 {
             color: #007ACC;
         }
         ul {
@@ -60,6 +68,14 @@
     </header>
     
     <main>
+        <!-- Contact Section -->
+        <section>
+            <h2>Contact Information</h2>
+            <p>Email: <a href="mailto:ahmedgawish127@gmail.com">ahmedgawish127@gmail.com</a></p>
+            <p>Phone: +201125183576</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/ahmed-gawish">Ahmed Gawish LinkedIn</a></p>
+        </section>
+        
         <!-- Objective Section -->
         <section>
             <h2>Objective</h2>
@@ -77,10 +93,26 @@
         <section>
             <h2>Experience & Internships</h2>
             <ul>
-                <li><strong>Medical Representative at Pharco Corporation</strong> (11/2023 - Present)</li>
+                <li><strong>Medical Representative at Pharco Corporation</strong> (11/2023 - Present)
+                    <ul>
+                        <li>Infertility and Family planning line.</li>
+                        <li>Promoted local and fully imported drugs.</li>
+                    </ul>
+                </li>
                 <li><strong>Pharmacist at Zaghloul Pharmacy</strong> (7/2023 - 11/2023)</li>
-                <li><strong>Intern Medical Representative at Nerhadou International</strong> (8/2022 - 9/2022)</li>
-                <li><strong>Intern Medical Representative at Rameda Pharmaceuticals</strong> (July 2022, 10 days)</li>
+                <li><strong>Intern Medical Representative at Nerhadou International</strong> (8/2022 - 9/2022)
+                    <ul>
+                        <li>Promoted OCTATRON drug inside hospitals (Am) & private clinics (Pm).</li>
+                        <li>Made doctor list after prospection inside my area, consisting of 80 doctors.</li>
+                        <li>Covered internal medicine and dermatology specialties.</li>
+                    </ul>
+                </li>
+                <li><strong>Intern Medical Representative at Rameda Pharmaceuticals</strong> (July 2022, 10 days)
+                    <ul>
+                        <li>1-week double visits with Cardiovascular product specialist.</li>
+                        <li>3 days online training.</li>
+                    </ul>
+                </li>
                 <li><strong>Intern at Parkville Company</strong> (September 2021, Virtual e-champion training)</li>
             </ul>
         </section>
@@ -101,14 +133,6 @@
                 <li>Handling Objections Course from LinkedIn</li>
                 <li>GIT Disorders Course from Eva Pharma</li>
             </ul>
-        </section>
-
-        <!-- Contact Section -->
-        <section>
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:ahmedgawish127@gmail.com">ahmedgawish127@gmail.com</a></p>
-            <p>Phone: +201125183576</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/ahmed-gawish">Ahmed Gawish LinkedIn</a></p>
         </section>
     </main>
 
